--- a/pur_beurre_project/supersub/templates/supersub/registered_products.html
+++ b/pur_beurre_project/supersub/templates/supersub/registered_products.html
@@ -18,24 +18,25 @@
         <section class="page-section bg-white" id="services">
             <div class="container">
                 <div class="row">
-                    {% for favorite in favorites %}
+                    {% for paginator in page_object %}
                         <div class="col-lg-4 col-sm-6 text-center">
                             <div class="m-4 results-image">
-                                <a href="{% url 'supersub:product_detail' id_product=favorite.product.id %}" class="ele_dark_href">
-                                    <img style="max-height: 80px;" src=" {{ favorite.product.image }} " alt="" />
-                                    <p class="h5 m-1"> {{ favorite.product.name }} </p>
+                                <a href="{% url 'supersub:product_detail' id_product=paginator.product.id %}" class="ele_dark_href">
+                                    <img style="max-height: 80px;" src=" {{ paginator.product.image }} " alt="" />
+                                    <p class="h5 m-1"> {{ paginator.product.name }} </p>
                                 </a>
                                 <div class="nutriscore-circle">
                                     <i class="fas fa-circle"></i>
                                 </div>
                                 <div class="nutriscore-letter text-uppercase">
-                                    <p>{{ favorite.product.nutriscore_grade }}</p>
+                                    <p>{{ paginator.product.nutriscore_grade }}</p>
                                 </div>
             
                             </div>
                         </div>
                     {% endfor %}
                 </div>
+                {% include 'supersub/pagination.html' %}
             </div>
         </section>
 {% endblock %}
