--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -61,25 +61,7 @@
                         </div>
                     {% endfor %}
                 </div>
-                <div class="row align-items-end text-center">
-                    <div class="col">
-                        <!-- <div class="pagination text-center">
-                            <span class="step-links"> -->
-                                {% if page_object.has_previous %}
-                                <a href="?page={{ page_object.previous_page_number }}#favorite_section" class="ele_dark_href">&laquo;</a>
-                                {% endif %}
-                
-                                <span class="current text-dark">
-                                    Page {{ page_object.number }} de {{ page_object.paginator.num_pages }}.
-                                </span>
-                
-                                {% if page_object.has_next %}
-                                <a href="?page={{ page_object.next_page_number }}#favorite_section" class="ele_dark_href">&raquo;</a>
-                                {% endif %}
-                            <!-- </span>
-                        </div> -->
-                    </div>
-                </div>
+                {% include 'supersub/pagination.html' %}
             </div>
         </section>
     {% endif %}
