--- a/pur_beurre_project/supersub/templates/supersub/index.html
+++ b/pur_beurre_project/supersub/templates/supersub/index.html
@@ -26,7 +26,7 @@
                         </div>
                         {% endfor %}
                     {% endif %}
-                    <form action="{% url 'supersub:results'%}" method="post" novalidate>
+                    <form id="index_main_search_form" action="{% url 'supersub:results'%}" method="post" novalidate>
                         {% csrf_token %}
                         <div class="form-group align-content-center">
                         <div class="row justify-content-center">
@@ -41,7 +41,7 @@
                                 {% endfor %}
                             </div>
                             <div class="col-8 col-lg-10 pl-2 ">
-                                <button type="submit" id="create_account_button" class=" btn btn-primary mb-4">Chercher</button>
+                                <button type="submit" id="index_search_button" class=" btn btn-primary mb-4">Chercher</button>
                             </div>
                         </div>
                         </div>
