--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -20,7 +20,7 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
-                        <h2 class="text-white-75 mb-4">[ {{ searched_prod.name }} ]</h2> 
+                        <h2 id="result_searched_product" class="text-white-75 mb-4">[ {{ searched_prod.name }} ]</h2> 
                     </div>
                 </div>
             </div>
